--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,8 @@ body {
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
   width: 375px;
   margin-left: auto;
   margin-right: auto;
@@ -12,4 +14,32 @@ body {
   .content {
     margin: 0 20px;
   }
+}
+.logo-contianer {
+  flex: 3 1 auto;
+}
+
+.logo {
+  text-align: center;
+}
+
+.signin-container {
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+.email-container {
+  margin: 1em;
+}
+
+.password-container {
+  margin: 1em;
+}
+
+.social-container {
+  flex: 1 1 auto;
+}
+
+.signup-info-container {
+  flex: 1 1 auto;
 }
