implement basic signup page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,11 @@ body {
     margin: 0 20px;
   }
 }
+
+input {
+  border: none;
+  width: 20em;
+  height: 2em;
+  margin-bottom: 2em;
+  align-items: center;
+}
