Use QuestionContext for Intro

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,12 +15,12 @@ img {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  //height: 100%;
   max-width: 375px; // width: 375px;
   margin-left: auto;
   margin-right: auto;
   background: lightgrey; // TODO : 작업 색상 구분용 추후 변경 필요
-  height: 720px; // TODO : 작업용 크기 추후 변경 필요
+  height: 800px; // TODO : 작업용 크기 추후 변경 필요
   //   .content {
   //   margin: 0 20px;
   // }
