--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,19 @@ img {
   //   .content {
   //   margin: 0 20px;
   // }
+
+  .floating-button{
+    position:fixed;
+    width:40px;
+    height:40px;
+    bottom:40px;
+    margin-left: 310px;
+    background-color:#964b00;
+    color:#FFF;
+    border-radius:50px;
+    box-shadow: 1.5px 1px 2px #999;
+    padding-top: 6px;
+  }
 }
 
 input {
