--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@ img {
   // }
 
   .floating-button{
+    text-align: center;
     position:fixed;
     width:40px;
     height:40px;
@@ -56,6 +57,24 @@ input {
   }
   .today-question {
     margin : 2em 3em;
+  }
+}
+
+.add{
+  text-align: center;
+  .add-question{
+    margin: 2em 4em;
+  }
+  textarea{
+    width: 100%;
+    height: 200px;
+    padding: 10px;
+    box-sizing: border-box;
+    border: solid 3px #552a04;
+    border-radius: 5px;
+    font-size: 16px;
+    resize: both;
+    background: bisque;
   }
 }
 
