--- a/src/styles/user.scss
+++ b/src/styles/user.scss
@@ -2,17 +2,23 @@
 
 * {
   box-sizing: border-box;
+  &::before,
+  &::after {
+    box-sizing: border-box;
+  }
   padding: 0;
   margin: 0;
 }
 
 body {
   font-family: 'PT Serif', serif;
-  //background: #aa947e;
-  //background-color: #a58a6e;
-  background-image: url('../image/sea.jpg');
+  background-color: #a58a6e;
   background-size: cover;
+  position: relative;
 }
+
+// #search-icon { transition: font-size 0.3s; }
+//  #search-icon:hover { font-size: 17px; }
 
 .container {
   display: flex;
@@ -21,6 +27,7 @@ body {
   min-width: 375px;
   width: 100%;
   height: 100vh;
+  position: relative;
   background-image: url('../image/paper_texture.jpg');
   background-size: cover;
   align-items: center;
@@ -38,7 +45,13 @@ body {
     flex-direction: column;
     flex: 1 1 auto;
     margin-top: 2em;
-    margin-bottom: -2em;
+    margin-bottom: -3em;
+
+    .error-box {
+      text-align: center;
+      margin-top: 1em;
+      font-style: italic;
+    }
 
     input {
       width: 25em;
@@ -49,6 +62,7 @@ body {
       text-align: center;
       box-shadow: 2px 5px 10px -3px #f3d1b7;
     }
+
     input::placeholder {
       color: #b1a394;
       font-style: italic;
@@ -57,13 +71,12 @@ body {
 
     input:focus {
       outline: 2px solid #ffddbc;
-      background-color: #b1a394;
     }
 
     button {
+      color: hsl(222, 25%, 14%);
       border: none;
       background-color: #ffddbc;
-      opacity: 70%;
       box-shadow: 2px 5px 10px -3px #f3c0b748;
       text-align: center;
       font-size: 15px;
@@ -71,9 +84,45 @@ body {
       height: 4em;
       margin: 3em 1em;
     }
+
     button:focus {
       outline: 0;
     }
+
+    button:hover {
+      animation: swingHorizontal 1s ease;
+      animation-iteration-count: 1;
+    }
+
+    @keyframes swingHorizontal {
+      15% {
+        transform: translateX(5px);
+      }
+      30% {
+        transform: translateX(-5px);
+      }
+      50% {
+        transform: translateX(3px);
+      }
+      65% {
+        transform: translateX(-3px);
+      }
+      80% {
+        transform: translateX(2px);
+      }
+      100% {
+        transform: translateX(0);
+      }
+    }
+  }
+
+  hr {
+    border: none;
+    border-top: 1px solid #ffcccc;
+    background-color: #ffffff00;
+    height: 0.5px;
+    width: 70%;
+    margin-bottom: 3em;
   }
 
   .social-container {
@@ -82,33 +131,51 @@ body {
     flex-direction: column;
 
     .social-signin {
-      font: 16px bold;
+      font-size: 16px;
       width: 24em;
-      height: 4em;
+      height: 3em;
       border: none;
       margin-bottom: 2em;
-      background-color: #f76d6a;
+      background-color: #ffffff00;
 
       span {
         text-align: center;
       }
     }
-    .social-signin:focus {
+    .signup-info-container:focus {
       outline: 0;
     }
 
     .signup-info-container {
+      border: none;
       font-size: 15px;
       width: 25.8em;
       height: 4em;
       border: solid 3;
       cursor: text;
+      background-color: #ffffff00;
+
+      .social-signin:focus {
+        outline: 0;
+      }
 
       a {
         text-decoration: none;
         font: 16px bold;
         color: #f76d6a;
         margin-left: 2em;
+      }
+      .blinking {
+        animation: blink 1.5s ease-in-out infinite alternate;
+      }
+
+      @keyframes blink {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
       }
     }
   }
