UPDATE paper_texture background

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,8 +20,8 @@ body {
   height: 100vh;
   margin-left: auto;
   margin-right: auto;
-  background-image: url('../image/paper_texture.jpg');
-  background-size: cover;
+  background-image: url('../image/paper_texture.png');
+  background-repeat: repeat;
   align-items: center;
   cursor: pointer;
 
