--- a/src/styles/user.scss
+++ b/src/styles/user.scss
@@ -28,8 +28,8 @@ body {
   width: 100%;
   height: 100vh;
   position: relative;
-  background-image: url('../image/paper_texture.jpg');
-  background-size: cover;
+  background-image: url('../image/paper_texture.png');
+  background-repeat: repeat;
   align-items: center;
   cursor: pointer;
 
