--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'PT Serif', serif;
+  //font-family: 'PT Serif', serif;
   background: #aa947e;
 }
 
@@ -17,7 +17,8 @@ body {
   max-width: 900px;
   min-width: 375px;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
   background-image: url('../image/paper_texture.png');
@@ -54,82 +55,134 @@ body {
       display: flex;
       text-decoration: none;
     }
+  }
 
-    .add {
-      text-align: center;
-      .add-question {
-        margin: 2em 4em;
-      }
-      textarea {
-        width: 100%;
-        height: 200px;
-        padding: 10px;
-        box-sizing: border-box;
-        border: solid 3px #552a04;
-        border-radius: 5px;
-        font-size: 16px;
-        resize: both;
-        background: bisque;
+  &.list {
+    padding-bottom: 40px;
+    .item {
+      font-family: 'Nanum Brush Script', cursive;
+      font-size: 2.5rem;
+      color: black;
+      width: 595px;
+      height: 400px;
+      border-radius: 25px;
+      border: 1px solid rgb(0, 0, 0);
+      position: relative;
+      box-shadow: 2px 2px 10px;
+      transition: all 0.5s;
+      transition-delay: 0.4s;
+      margin: 30px auto auto;
+    }
+
+    .item:hover {
+      width: 680px;
+      height: 450px;
+
+      .question {
+        width: 102%;
+        height: 33%;
+        padding: 18px;
+        position: absolute;
+        z-index: 2;
       }
     }
 
-    // 일단 하나만 쓸 예정이라서 modal로 했음
-    .modal {
-      display: none;
-      position: relative;
+    .thumbnail {
+      width: 100%;
+      height: 69%;
+      border-top-left-radius: 25px;
+      border-top-right-radius: 25px;
+      background-image: url('../image/answer-list-thumbnail.png');
+      background-size: cover;
+    }
+
+    .question {
+      width: 100%;
+      height: 31%;
+      padding: 18px;
+      position: absolute;
+      z-index: 2;
+    }
+  }
+
+  .add {
+    text-align: center;
+
+    .add-question {
+      margin: 2em 4em;
+    }
+
+    textarea {
+      width: 100%;
+      height: 200px;
+      padding: 10px;
+      box-sizing: border-box;
+      border: solid 3px #552a04;
+      border-radius: 5px;
+      font-size: 16px;
+      resize: both;
+      background: bisque;
+    }
+  }
+
+  // 일단 하나만 쓸 예정이라서 modal로 했음
+  .modal {
+    display: none;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+
+    p {
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+
+    button {
+      display: inline-block;
+      width: 50px;
+      margin-left: calc(100% - 100px - 10px);
+    }
+
+    .modal_content {
+      width: 300px;
+      margin: 100px auto;
+      padding: 20px 10px;
+      background: #fff;
+      border: 2px solid #666;
+      text-align: center;
+    }
+
+    .modal_layer {
+      position: fixed;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
-      z-index: 1;
-      p {
-        margin-top: 20px;
-        margin-bottom: 20px;
-      }
-      button {
-        display: inline-block;
-        width: 50px;
-        margin-left: calc(100% - 100px - 10px);
-      }
-      .modal_content {
-        width: 300px;
-        margin: 100px auto;
-        padding: 20px 10px;
-        background: #fff;
-        border: 2px solid #666;
-        text-align: center;
-      }
-
-      .modal_layer {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        z-index: -1;
-      }
+      background: rgba(0, 0, 0, 0.5);
+      z-index: -1;
     }
+  }
 
-    //   .title {
-    //     margin: 2em 3em;
-    //     font-family: 'PT Serif', serif;
-    //   }
-    //   .today-question {
-    //     margin: 2em 3em;
-    //   }
-    // }
+  .title {
+    margin: 2em 3em;
+    font-family: 'PT Serif', serif;
+  }
 
-    //   .floating-button {
-    //     position: fixed;
-    //     width: 40px;
-    //     height: 40px;
-    //     bottom: 40px;
-    //     margin-left: 310px;
-    //     background-color: #964b00;
-    //     color: #fff;
-    //     border-radius: 50px;
-    //     box-shadow: 1.5px 1px 2px #999;
-    //     padding-top: 6px;
-    //   }
-    // }
+  .today-question {
+    margin: 2em 3em;
+  }
+
+  .floating-button {
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    bottom: 40px;
+    margin-left: 310px;
+    background-color: #964b00;
+    color: #fff;
+    border-radius: 50px;
+    box-shadow: 1.5px 1px 2px #999;
+    padding-top: 6px;
   }
 }
