--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -165,12 +165,14 @@ body {
   }
 
   .title {
-    margin: 2em 3em;
+    margin: 4.5em 2.5em;
     font-family: 'PT Serif', serif;
+    font-size:  xxx-large;
   }
 
   .today-question {
-    margin: 2em 3em;
+    margin:  4.5em 2.5em;
+    font-size:  x-large;
   }
 
   .floating-button {
@@ -179,7 +181,7 @@ body {
     height: 40px;
     bottom: 40px;
     margin-left: 310px;
-    background-color: #964b00;
+    background-color: #dd8f53;
     color: #fff;
     border-radius: 50px;
     box-shadow: 1.5px 1px 2px #999;
