Modify intro css

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -192,7 +192,7 @@ body {
     box-shadow: 1.5px 1px 2px #999;
     padding-top: 6px;
   }
-
+}
   //signin page
   &.signin {
     img {
@@ -312,7 +312,7 @@ body {
         font-size: 15px;
         width: 25.8em;
         height: 4em;
-        border: solid 3;
+        border: solid 3px;
         cursor: text;
         background-color: #ffffff00;
 
