Update header css

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,7 +35,7 @@ body {
   header {
     display: flex;
     justify-content: space-between;
-    flex: 1 1 auto;
+    flex: 0 1 auto;
     flex-direction: row;
     flex-wrap: nowrap;
     text-align: center;
@@ -63,297 +63,157 @@ body {
     }
   }
 
-  &.list {
-    padding-bottom: 40px;
-    .item {
-      font-family: 'Nanum Brush Script', cursive;
-      font-size: 2.5rem;
-      color: black;
-      width: 595px;
-      height: 400px;
-      border-radius: 25px;
-      border: 1px solid rgb(0, 0, 0);
-      position: relative;
-      box-shadow: 2px 2px 10px;
-      transition: all 0.5s;
-      transition-delay: 0.4s;
-      margin: 30px auto auto;
-    }
+  .content {
+    &.list {
+      padding-bottom: 40px;
 
-    .item:hover {
-      width: 680px;
-      height: 450px;
+      .item {
+        font-family: 'Nanum Brush Script', cursive;
+        font-size: 2.5rem;
+        color: black;
+        width: 595px;
+        height: 400px;
+        border-radius: 25px;
+        border: 1px solid rgb(0, 0, 0);
+        position: relative;
+        box-shadow: 2px 2px 10px;
+        transition: all 0.5s;
+        transition-delay: 0.4s;
+        margin: 30px auto auto;
+      }
+
+      .item:hover {
+        width: 680px;
+        height: 450px;
+
+        .question {
+          width: 102%;
+          height: 33%;
+          padding: 18px;
+          position: absolute;
+          z-index: 2;
+        }
+      }
+
+      .thumbnail {
+        width: 100%;
+        height: 69%;
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+        background-image: url('../image/answer-list-thumbnail.png');
+        background-size: cover;
+      }
+
       .question {
-        width: 102%;
-        height: 33%;
+        width: 100%;
+        height: 31%;
         padding: 18px;
         position: absolute;
         z-index: 2;
       }
     }
 
-    .thumbnail {
-      width: 100%;
-      height: 69%;
-      border-top-left-radius: 25px;
-      border-top-right-radius: 25px;
-      background-image: url('../image/answer-list-thumbnail.png');
-      background-size: cover;
-    }
-
-    .question {
-      width: 100%;
-      height: 31%;
-      padding: 18px;
-      position: absolute;
-      z-index: 2;
-    }
-  }
-
-  .add {
-    text-align: center;
-
-    .add-question {
-      margin: 2em 4em;
-    }
-
-    textarea {
-      width: 100%;
-      height: 200px;
-      padding: 10px;
-      box-sizing: border-box;
-      border: solid 3px #552a04;
-      border-radius: 5px;
-      font-size: 16px;
-      resize: both;
-      background: bisque;
-    }
-  }
-
-  // 일단 하나만 쓸 예정이라서 modal로 했음
-  .modal {
-    display: none;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-
-    p {
-      margin-top: 20px;
-      margin-bottom: 20px;
-    }
-
-    button {
-      display: inline-block;
-      width: 50px;
-      margin-left: calc(100% - 100px - 10px);
-    }
-
-    .modal_content {
-      width: 300px;
-      margin: 100px auto;
-      padding: 20px 10px;
-      background: #fff;
-      border: 2px solid #666;
+    .add {
       text-align: center;
+
+      .add-question {
+        margin: 2em 4em;
+      }
+
+      textarea {
+        width: 100%;
+        height: 200px;
+        padding: 10px;
+        box-sizing: border-box;
+        border: solid 3px #552a04;
+        border-radius: 5px;
+        font-size: 16px;
+        resize: both;
+        background: bisque;
+      }
     }
 
-    .modal_layer {
-      position: fixed;
-      top: 0;
-      left: 0;
+    // 일단 하나만 쓸 예정이라서 modal로 했음
+    .modal {
+      display: none;
+      position: relative;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: -1;
-    }
-  }
-&.intro {
-  .title {
-    margin: 4.5em 2.5em;
-    font-family: 'PT Serif', serif;
-    font-size: xxx-large;
-  }
+      z-index: 1;
 
-  .today-question {
-    margin: 4.5em 2.5em;
-    font-size: x-large;
-  }
-
-  .floating-button {
-    position: fixed;
-    width: 40px;
-    height: 40px;
-    bottom: 40px;
-    margin-left: 310px;
-    background-color: #dd8f53;
-    color: #fff;
-    border-radius: 50px;
-    box-shadow: 1.5px 1px 2px #999;
-    padding-top: 6px;
-  }
-}
-  //signin page
-  &.signin {
-    img {
-      display: flex;
-      flex: 3 3 auto;
-      margin: 5em;
-      margin-left: 2em;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      flex: 1 1 auto;
-      margin-top: 2em;
-      margin-bottom: -3em;
-
-      .error-box {
-        text-align: center;
-        margin-top: 1em;
-        font-style: italic;
-      }
-
-      input {
-        width: 25em;
-        height: 4em;
-        margin: 1em;
-        font-size: 15px;
-        border: none;
-        text-align: center;
-        box-shadow: 2px 5px 10px -3px #f3d1b7;
-      }
-
-      input::placeholder {
-        color: #b1a394;
-        font-style: italic;
-        font-size: 16px;
-      }
-      input:focus {
-        outline: 2px solid #ffddbc;
+      p {
+        margin-top: 20px;
+        margin-bottom: 20px;
       }
 
       button {
-        color: hsl(222, 25%, 14%);
-        border: none;
-        background-color: #ffddbc;
-        box-shadow: 2px 5px 10px -3px #f3c0b748;
+        display: inline-block;
+        width: 50px;
+        margin-left: calc(100% - 100px - 10px);
+      }
+
+      .modal_content {
+        width: 300px;
+        margin: 100px auto;
+        padding: 20px 10px;
+        background: #fff;
+        border: 2px solid #666;
         text-align: center;
-        font-size: 15px;
-        width: 25em;
-        height: 4em;
-        margin: 3em 1em;
       }
 
-      button:focus {
-        outline: 0;
-      }
-
-      button:hover {
-        animation: swingHorizontal 1s ease;
-        animation-iteration-count: 1;
-      }
-
-      @keyframes swingHorizontal {
-        15% {
-          transform: translateX(5px);
-        }
-        30% {
-          transform: translateX(-5px);
-        }
-        50% {
-          transform: translateX(3px);
-        }
-        65% {
-          transform: translateX(-3px);
-        }
-        80% {
-          transform: translateX(2px);
-        }
-        100% {
-          transform: translateX(0);
-        }
+      .modal_layer {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: -1;
       }
     }
 
-    hr {
-      border: none;
-      border-top: 1px solid #ffcccc;
-      background-color: #ffffff00;
-      height: 0.5px;
-      width: 70%;
-      margin-bottom: 3em;
-    }
-
-    .social-container {
-      display: flex;
-      flex: 1 1 auto;
-      flex-direction: column;
-
-      .social-signin {
-        font-size: 16px;
-        width: 24em;
-        height: 3em;
-        border: none;
-        margin-bottom: 2em;
-        background-color: #ffffff00;
-
-        span {
-          text-align: center;
-        }
-      }
-      .signup-info-container:focus {
-        outline: 0;
+    &.intro {
+      .title {
+        margin: 4.5em 2.5em;
+        font-family: 'PT Serif', serif;
+        font-size: xxx-large;
       }
 
-      .signup-info-container {
-        border: none;
-        font-size: 15px;
-        width: 25.8em;
-        height: 4em;
-        border: solid 3px;
-        cursor: text;
-        background-color: #ffffff00;
+      .today-question {
+        margin: 4.5em 2.5em;
+        font-size: x-large;
+      }
 
-        .social-signin:focus {
-          outline: 0;
-        }
-
-        a {
-          text-decoration: none;
-          font: 16px bold;
-          color: #f76d6a;
-          margin-left: 2em;
-        }
-        .blinking {
-          animation: blink 1.5s ease-in-out infinite alternate;
-        }
-
-        @keyframes blink {
-          0% {
-            opacity: 0;
-          }
-          100% {
-            opacity: 1;
-          }
-        }
+      .floating-button {
+        position: fixed;
+        width: 40px;
+        height: 40px;
+        bottom: 40px;
+        margin-left: 310px;
+        background-color: #dd8f53;
+        color: #fff;
+        border-radius: 50px;
+        box-shadow: 1.5px 1px 2px #999;
+        padding-top: 6px;
       }
     }
-  }
 
-  //signup & header
-  &.signup {
-    img {
-      margin-top: 10em;
-      margin-left: 18em;
-    }
+    //signin page
+    &.signin {
+      img {
+        display: flex;
+        flex: 3 3 auto;
+        margin: 5em;
+        margin-left: 2em;
+      }
 
-    .userinfo-container {
-      display: flex;
-      flex: 3 3 0;
       form {
+        display: flex;
         flex-direction: column;
+        flex: 1 1 auto;
+        margin-top: 2em;
+        margin-bottom: -3em;
+
         .error-box {
           text-align: center;
           margin-top: 1em;
@@ -379,47 +239,199 @@ body {
         input:focus {
           outline: 2px solid #ffddbc;
         }
+
+        button {
+          color: hsl(222, 25%, 14%);
+          border: none;
+          background-color: #ffddbc;
+          box-shadow: 2px 5px 10px -3px #f3c0b748;
+          text-align: center;
+          font-size: 15px;
+          width: 25em;
+          height: 4em;
+          margin: 3em 1em;
+        }
+
+        button:focus {
+          outline: 0;
+        }
+
+        button:hover {
+          animation: swingHorizontal 1s ease;
+          animation-iteration-count: 1;
+        }
+
+        @keyframes swingHorizontal {
+          15% {
+            transform: translateX(5px);
+          }
+          30% {
+            transform: translateX(-5px);
+          }
+          50% {
+            transform: translateX(3px);
+          }
+          65% {
+            transform: translateX(-3px);
+          }
+          80% {
+            transform: translateX(2px);
+          }
+          100% {
+            transform: translateX(0);
+          }
+        }
       }
-      button {
-        color: hsl(222, 25%, 14%);
-        transition: color 0.25s ease-in-out, transform 0.25s ease-in-out;
+
+      hr {
         border: none;
-        background-color: #ffddbc;
-        box-shadow: 2px 5px 10px -3px #f3c0b748;
-        text-align: center;
-        font-size: 15px;
-        width: 25em;
-        height: 4em;
-        margin: 3em 1em;
+        border-top: 1px solid #ffcccc;
+        background-color: #ffffff00;
+        height: 0.5px;
+        width: 70%;
+        margin-bottom: 3em;
       }
 
-      button:focus {
-        outline: 0;
+      .social-container {
+        display: flex;
+        flex: 1 1 auto;
+        flex-direction: column;
+
+        .social-signin {
+          font-size: 16px;
+          width: 24em;
+          height: 3em;
+          border: none;
+          margin-bottom: 2em;
+          background-color: #ffffff00;
+
+          span {
+            text-align: center;
+          }
+        }
+
+        .signup-info-container:focus {
+          outline: 0;
+        }
+
+        .signup-info-container {
+          border: none;
+          font-size: 15px;
+          width: 25.8em;
+          height: 4em;
+          border: solid 3px;
+          cursor: text;
+          background-color: #ffffff00;
+
+          .social-signin:focus {
+            outline: 0;
+          }
+
+          a {
+            text-decoration: none;
+            font: 16px bold;
+            color: #f76d6a;
+            margin-left: 2em;
+          }
+
+          .blinking {
+            animation: blink 1.5s ease-in-out infinite alternate;
+          }
+
+          @keyframes blink {
+            0% {
+              opacity: 0;
+            }
+            100% {
+              opacity: 1;
+            }
+          }
+        }
+      }
+    }
+
+    //signup & header
+    &.signup {
+      img {
+        margin-top: 10em;
+        margin-left: 18em;
       }
 
-      button:hover {
-        animation: swing-button 1s ease;
-        animation-iteration-count: 1;
-      }
+      .userinfo-container {
+        display: flex;
+        flex: 3 3 0;
 
-      @keyframes swing-button {
-        15% {
-          transform: translateX(5px);
+        form {
+          flex-direction: column;
+
+          .error-box {
+            text-align: center;
+            margin-top: 1em;
+            font-style: italic;
+          }
+
+          input {
+            width: 25em;
+            height: 4em;
+            margin: 1em;
+            font-size: 15px;
+            border: none;
+            text-align: center;
+            box-shadow: 2px 5px 10px -3px #f3d1b7;
+          }
+
+          input::placeholder {
+            color: #b1a394;
+            font-style: italic;
+            font-size: 16px;
+          }
+
+          input:focus {
+            outline: 2px solid #ffddbc;
+          }
         }
-        30% {
-          transform: translateX(-5px);
+
+        button {
+          color: hsl(222, 25%, 14%);
+          transition: color 0.25s ease-in-out, transform 0.25s ease-in-out;
+          border: none;
+          background-color: #ffddbc;
+          box-shadow: 2px 5px 10px -3px #f3c0b748;
+          text-align: center;
+          font-size: 15px;
+          width: 25em;
+          height: 4em;
+          margin: 3em 1em;
         }
-        50% {
-          transform: translateX(3px);
+
+        button:focus {
+          outline: 0;
         }
-        65% {
-          transform: translateX(-3px);
+
+        button:hover {
+          animation: swing-button 1s ease;
+          animation-iteration-count: 1;
         }
-        80% {
-          transform: translateX(2px);
-        }
-        100% {
-          transform: translateX(0);
+
+        @keyframes swing-button {
+          15% {
+            transform: translateX(5px);
+          }
+          30% {
+            transform: translateX(-5px);
+          }
+          50% {
+            transform: translateX(3px);
+          }
+          65% {
+            transform: translateX(-3px);
+          }
+          80% {
+            transform: translateX(2px);
+          }
+          100% {
+            transform: translateX(0);
+          }
         }
       }
     }
