Update Edit component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -110,7 +110,8 @@ body {
       height: 200px;
       margin: 150px auto;
       padding: 20px 10px;
-      background: linear-gradient(50deg, #ffebef, #ffd1dc, #ffb8c9, #ff9eb5, #ff85a2);
+      background: white;
+      border: #ffb8c9 solid 8px;
       text-align: center;
       border-radius: 15px;
       box-shadow: 2px 2px 10px rgba(50, 255, 255, .2);
