--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -108,13 +108,12 @@ body {
     .modal-content {
       width: 400px;
       height: 200px;
-      margin: 150px auto;
+      margin: 300px auto;
       padding: 20px 10px;
       background: white;
-      border: #ffb8c9 solid 8px;
+      border: #A4896D solid 4px;
       text-align: center;
-      border-radius: 15px;
-      box-shadow: 2px 2px 10px rgba(50, 255, 255, .2);
+      box-shadow:2px 5px 10px -3px #f3d1b7;
 
       p {
         margin-top: 20px;
@@ -202,17 +201,54 @@ body {
         font-family: 'Nanum Brush Script', cursive;
       }
 
-      //textarea {
-      //  width: 100%;
-      //  height: 200px;
-      //  padding: 10px;
-      //  box-sizing: border-box;
-      //  border: solid 3px #552a04;
-      //  border-radius: 5px;
-      //  font-size: 16px;
-      //  resize: both;
-      //  background: bisque;
-      //}
+      textarea {
+        min-width: 533px;
+        min-height: 430px;
+        width: 25em;
+        height: 4em;
+        margin: 1em;
+        font-size: 15px;
+        border: none;
+        text-align: center;
+        box-shadow: 2px 5px 10px -3px #f3d1b7;
+      }
+
+      textarea:focus {
+        outline: none;
+      }
+    }
+
+    &.read {
+      text-align: center;
+
+      .read-question {
+        font-size: 2.3rem;
+        margin: 23px 4em 2em;
+        font-family: 'Nanum Brush Script', cursive;
+      }
+
+      .read-data {
+        text-align: right;
+        margin-bottom: 2em
+      }
+
+      .update-date {
+        text-align: right;
+      }
+
+      .my-answer {
+        margin: 2em 4em;
+      }
+    }
+
+    &.edit {
+      text-align: center;
+
+      .edit-question {
+        font-size: 2.3rem;
+        margin: 23px 4em 2em;
+        font-family: 'Nanum Brush Script', cursive;
+      }
 
       textarea {
         min-width: 533px;
@@ -225,30 +261,31 @@ body {
         text-align: center;
         box-shadow: 2px 5px 10px -3px #f3d1b7;
       }
-    }
 
-    &.edit {
-
+      textarea:focus {
+        outline: none;
+      }
     }
 
     &.intro {
       text-align: center;
 
       .logo-container {
-        margin: 4.5em 4.5em;
+        margin: 0.5em 8.5em;
       }
 
       .title {
-        margin: 6.5em 6.5em;
+        margin: 2.5em 2.5em;
         font-family: 'PT Serif', serif;
-        font-size: 30px;
+        font-size: 20px;
         text-align: center;
       }
 
       .today-question {
-        margin: 4.5em 2.5em;
-        font-size: 30px;
+        margin: 3.5em 3.5em;
+        font-size: 40px;
         text-align: center;
+        font-family: 'Nanum Brush Script',cursive;
       }
 
       .floating-button {
